add opensea section

--- a/index.html
+++ b/index.html
@@ -50,25 +50,80 @@
                     </div>
                     <div class="item">
                         <p>Approve NFT</p>
-                        <span>4$</span>
-                        <p id="gas-price">0.003 Ether</p>
+                        <span>0$</span>
+                        <p id="gas-price">0 Ether</p>
                     </div>
                     <div class="item">
                         <p>Approve WETH</p>
-                        <span>4$</span>
-                        <p id="gas-price">0.003 Ether</p>
+                        <span>0$</span>
+                        <p id="gas-price">0 Ether</p>
                     </div>
                     <div class="item">
                         <p>Wrap ETH -> WETH</p>
-                        <span>4$</span>
-                        <p id="gas-price">0.003 Ether</p>
+                        <span>0$</span>
+                        <p id="gas-price">0 Ether</p>
                     </div>
                 </div>
                 <div class="box1">
                     <h3>Foundation</h3>
+                    <div class="item">
+                        <p>List NFT</p>
+                        <span>5$</span>
+                        <p id="gas-price">0.004 Ether</p>
+                    </div>
+                    <div class="item">
+                        <p>Mint NFT</p>
+                        <span>5$</span>
+                        <p id="gas-price">0.004 Ether</p>
+                    </div>
+                    <div class="item">
+                        <p>Create Collection</p>
+                        <span>3$</span>
+                        <p id="gas-price">0.002 Ether</p>
+                    </div>
+                    <div class="item">
+                        <p>Change Price</p>
+                        <span>0$</span>
+                        <p id="gas-price">0 Ether</p>
+                    </div>
+                    <div class="item">
+                        <p>Settle Auction</p>
+                        <span>5$</span>
+                        <p id="gas-price">0.003 Ether</p>
+                    </div>
+                    <div class="item">
+                        <p>Place Bid</p>
+                        <span>1$</span>
+                        <p id="gas-price">0.001 Ether</p>
+                    </div>
                 </div>
                 <div class="box1">
                     <h3>Opensea</h3>
+                    <div class="item">
+                        <p>Register Account</p>
+                        <span>7$</span>
+                        <p id="gas-price">0.005 Ether</p>
+                    </div>
+                    <div class="item">
+                        <p>Approve NFT</p>
+                        <span>0$</span>
+                        <p id="gas-price">0 Ether</p>
+                    </div>
+                    <div class="item">
+                        <p>Buy NFT</p>
+                        <span>5$</span>
+                        <p id="gas-price">0.004 Ether</p>
+                    </div>
+                    <div class="item">
+                        <p>Approve WETH</p>
+                        <span>0$</span>
+                        <p id="gas-price">0 Ether</p>
+                    </div>
+                    <div class="item">
+                        <p>Wrap ETH -> WETH</p>
+                        <span>0$</span>
+                        <p id="gas-price">0 Ether</p>
+                    </div>
                 </div>
             </div>
         </div>
